--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             padding: 0 20px; /* Padding on right only */
         }
 
-        /* Logo is now absolutely positioned in the top-left */
+        /* Logo is now absolutely positioned in the top-left corner */
         .logo-container {
             position: absolute;
             top: 50%;
