--- a/index.html
+++ b/index.html
@@ -738,12 +738,13 @@
         
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu" class="fixed top-0 left-0 right-0 w-full h-full bg-black bg-opacity-95 z-50 hidden">
-            <!-- REFINEMENT: Align items to the top and add more padding -->
-            <nav class="flex flex-col items-start justify-start pt-12 p-4">
+            <!-- EDIT: Changed items-start to items-center to center the menu items -->
+            <nav class="flex flex-col items-center justify-start pt-12 p-4">
                 <a href="#hero" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Accueil</a>
-                <a href="#content" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Catalogue</a>
+                <a href="#content" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Notre Contenu</a>
                 <a href="#test-iptv" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Test IPTV</a>
                 <a href="#pricing" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Tarifs</a>
+                <a href="#contact" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Contact</a>
             </nav>
         </div>
 
