--- a/index.html
+++ b/index.html
@@ -738,8 +738,9 @@
         
         <!-- Mobile Menu Overlay -->
         <div id="mobile-menu" class="fixed top-0 left-0 right-0 w-full h-full bg-black bg-opacity-95 z-50 hidden">
-            <!-- EDIT: Changed items-start to items-center to center the menu items -->
+            <!-- EDIT: This line centers the menu items on the page -->
             <nav class="flex flex-col items-center justify-start pt-12 p-4">
+                <!-- EDIT: This class centers the text inside each item -->
                 <a href="#hero" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Accueil</a>
                 <a href="#content" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Notre Contenu</a>
                 <a href="#test-iptv" class="block py-3 px-3 text-text-muted hover:text-accent-indigo hover:bg-gray-800 rounded-md transition duration-300 w-full text-center">Test IPTV</a>
