--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="XhjxzSYrbJKXwnD3Nf4sw6UKmRZ-NF3yoPDD636nI7Q" />
+
     <title>FrancyHostinger - L'avenir du divertissement à domicile</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
         
         /* --- STYLE GLOBAL DE FOND (Nightwatch Style) --- */
         body {
@@ -1515,4 +1521,5 @@
         });
     </script>
 </body>
+
 </html>
