--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
             { title: "Match de Football en Direct", img: "https://i.pinimg.com/1200x/38/57/26/3857266bf73582362363b0fd82637edf.jpg" }, // Vertical
             { title: "NBA Match 1", img: "https://i.pinimg.com/1200x/0c/07/ce/0c07cef4d1b93d89a7122186e0b4e204.jpg" }, // Vertical
             { title: "WC26", img: "https://i.pinimg.com/1200x/b4/33/b7/b433b7edae84bea89d8f0a272e9740d2.jpg" }, // Vertical
-            { title: "CAN25", img: "https://i.pinimg.com/1200x/0b/f9/75/0bf975ea0f784c1781e1fe84f8da4b33.jpg" }, // Vertical
+            { title: "HOCKEY", img: "https://i.pinimg.com/1200x/39/69/2b/39692be7a9ce324316f67518c1d33a06.jpg" }, // Vertical
             { title: "Tennis", img: "https://i.pinimg.com/1200x/9f/0d/10/9f0d10148b648a070eb80890d85b3bc4.jpg" }, // Vertical
             { title: "Live Football", img: "https://i.pinimg.com/736x/2f/76/78/2f7678847a6e3e75ea72179bfce77c33.jpg" },
             { title: "UFC", img: "https://i.pinimg.com/736x/3a/9a/ac/3a9aacf5326195b3730aebf5e1614078.jpg" },
