--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="google-site-verification" content="XhjxzSYrbJKXwnD3Nf4sw6UKmRZ-NF3yoPDD636nI7Q" />
 
     <title>Francy IPTV – Abonnement IPTV Premium en France, Belgique & Canada</title>
-    <meta name="description" content="Francy IPTV propose un abonnement IPTV premium en France, Belgique et Canada. Chaînes TV, films et séries HD compatibles Smart TV, Android et iPhone.">
+    <meta name="description" content="Profitez de Francy TV IPTV : chaînes françaises, sport et VOD en HD. Test IPTV gratuit 24h, sans engagement.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
